@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 use strict;
-use Test::More tests => 2;
+use Test::More 'no_plan';
 
 use Tie::Cache::LRU::Array;
 use Tie::Cache::LRU::LinkedList;
@@ -23,4 +23,14 @@ for my $class (qw(Tie::Cache::LRU::Array Tie::Cache::LRU::LinkedList)) {
 
     note("Testing $class");
     is_deeply \@each, [b => 'bb', a => 'aa'], 'each() comes out in LRU order';
+
+
+    # perldoc says this should be safe.
+    my %seen;
+    while(my($k, $v) = each(%cache)) {
+        $seen{$k} = $v;
+        delete $cache{$k};
+    }
+    is_deeply \%seen, { a => 'aa', b => 'bb' }, 'each() + delete()';
+    is keys %cache, 0;
 }
