@@ -1,3 +1,8 @@
+Next
+    New Tests
+    * Verified that each() + delete() works, as promised in "perldoc -f each"
+
+
 20081023  Thu Oct 23 21:02:04 PDT 2008
     Bug Fixes
     * each() no longer goes into an infinite loop
